--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <li><a href="homework.html" class="btn btn-homework"><i class="fas fa-book"></i> 📚 HOMEWORK</a></li>
       <li><a href="Notices.html" class="btn btn-notice"><i class="fas fa-bullhorn"></i> 📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts"><i class="fas fa-pencil-alt"></i> ✍️ POSTS</a></li>
-      <li><a href="books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a></li> <!-- NEW BUTTON -->
+      <li><a href="Books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a></li> <!-- NEW BUTTON -->
       <li><a href="#contact" class="btn btn-contact"><i class="fas fa-address-book"></i> ☎️ CONTACT</a></li>
       <li><a href="#FeePayment" class="btn btn-fee"><i class="fas fa-money-bill-wave"></i> 💸 FEE PAYMENT</a></li>
     </ul>
