--- a/index.html
+++ b/index.html
@@ -183,7 +183,15 @@
         <h1>🕉️<br> Saraswati Senior Secondary Vidya Mandir</h1>
         <h2>Class 10th - Section F</h2>
         <p><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
-        <p><strong>Developer:</strong> Priyanshu Singh</p>
+        <p style="font-size: 16px;">
+  <strong style="font-size: 14px;">(Developer:</strong> 
+  <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh)</span>
+</p>
+
+
+<!-- font link in head -->
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
+
       </div>
     </div>
   </header>
