--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
     <div class="header-container">
       <div class="school-info">
         <h1>🕉️<br> Saraswati Senior Secondary Vidya Mandir</h1>
-<h2>Class 10th - Section F</h2>
-        <p><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p> 
+<h2 style="font-size: 20px;">Class 10th - Section F</h2>
+<p style="font-size: 18px;"><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
+
   <strong style="font-size: 14px;">(Developer:</strong> 
   <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh)</span>
 </p>
