--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <p style="font-size: 16px;"><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
 
   <strong style="font-size: 14px;">(Developer:</strong> 
-  <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh)</span>
+  <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh</span>)
 </p>
 
 
