--- a/Books.html
+++ b/Books.html
@@ -192,45 +192,47 @@
     </div>
 
     <!-- Social Science -->
-    <div class="subject">
-      <div class="subject-header">Social Science</div>
-      <div class="chapter-list">
-        <h4>History</h4>
-        <ul>
-          <li><a href="#">1. The Rise of Nationalism in Europe</a></li>
-          <li><a href="#">2. Nationalism in India</a></li>
-          <li><a href="#">3. The Making of a Global World</a></li>
-          <li><a href="#">4. The Age of Industrialisation</a></li>
-          <li><a href="#">5. Print Culture and the Modern World</a></li>
-        </ul>
-        <h4>Geography</h4>
-        <ul>
-          <li><a href="#">1. Resources and Development</a></li>
-          <li><a href="#">2. Forest and Wildlife Resources</a></li>
-          <li><a href="#">3. Water Resources</a></li>
-          <li><a href="#">4. Agriculture</a></li>
-          <li><a href="#">5. Minerals and Energy Resources</a></li>
-          <li><a href="#">6. Manufacturing Industries</a></li>
-          <li><a href="#">7. Lifelines of National Economy</a></li>
-        </ul>
-        <h4>Political Science</h4>
-        <ul>
-          <li><a href="#">1. Power Sharing</a></li>
-          <li><a href="#">2. Federalism</a></li>
-          <li><a href="#">3. Gender, Religion and Caste</a></li>
-          <li><a href="#">4. Political Parties</a></li>
-          <li><a href="#">5. Outcomes of Democracy</a></li>
-        </ul>
-        <h4>Economics</h4>
-        <ul>
-          <li><a href="#">1. Development</a></li>
-          <li><a href="#">2. Sectors of the Indian Economy</a></li>
-          <li><a href="#">3. Money and Credit</a></li>
-          <li><a href="#">4. Globalisation and the Indian Economy</a></li>
-          <li><a href="#">5. Consumer Rights</a></li>
-        </ul>
-      </div>
-    </div>
+    <!-- Social Science -->
+<div class="subject">
+  <div class="subject-header">Social Science</div>
+  <div class="chapter-list">
+    <h4>History</h4>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1cwRQXtZpTzzlru-9mZv1nG2eBYzGzv1w/preview" target="_blank">1. The Rise of Nationalism in Europe</a></li>
+      <li><a href="https://drive.google.com/file/d/1FxzgzQeqmov2uDPa1UIUwBt4_89Pf1JV/preview" target="_blank">2. Nationalism in India</a></li>
+      <li><a href="https://drive.google.com/file/d/1b3ftDKkJ029PLIJsVavXNLmsY0emapZ-/preview" target="_blank">3. The Making of a Global World</a></li>
+      <li><a href="https://drive.google.com/file/d/1BQgMkulyuTyEmZ_j7hKModGrBw16Aky1/preview" target="_blank">4. The Age of Industrialisation</a></li>
+      <li><a href="https://drive.google.com/file/d/1zd8tlRTmZ36MgOgozCMfIgWxDnmVldRG/preview" target="_blank">5. Print Culture and the Modern World</a></li>
+    </ul>
+    <h4>Geography</h4>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1ftdejlgIXXa07bAdZJ4hejvsML0ZyNGY/preview" target="_blank">1. Resources and Development</a></li>
+      <li><a href="https://drive.google.com/file/d/1jrX1jBmduXylCm4kDcrRKYMHEP7ZmOEj/preview" target="_blank">2. Forest and Wildlife Resources</a></li>
+      <li><a href="https://drive.google.com/file/d/1XG7Q3jXbzhmvv-oXEAlH7Uu3veSDXs8P/preview" target="_blank">3. Water Resources</a></li>
+      <li><a href="https://drive.google.com/file/d/1m3IX67SzepITEg50gIpZhdtGRhaOaoAf/preview" target="_blank">4. Agriculture</a></li>
+      <li><a href="https://drive.google.com/file/d/16ntpyrb2zA7REgpJbH7FD-ZXlr_Knuwj/preview" target="_blank">5. Minerals and Energy Resources</a></li>
+      <li><a href="https://drive.google.com/file/d/1OE1DZLgBCw5W2CPddTUiJxL21p2xTZnf/preview" target="_blank">6. Manufacturing Industries</a></li>
+      <li><a href="https://drive.google.com/file/d/1az02IoqN4gwZfYiYjOXZfl5NgJrmmPvx/preview" target="_blank">7. Lifelines of National Economy</a></li>
+    </ul>
+    <h4>Political Science</h4>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1LMJBtKFxNUX_cAxx3kkmg90VxTyirKb0/preview" target="_blank">1. Power Sharing</a></li>
+      <li><a href="https://drive.google.com/file/d/1j87jOoiY6_mfKKbB8i9N2EVQ6YwAbF6J/preview" target="_blank">2. Federalism</a></li>
+      <li><a href="https://drive.google.com/file/d/1QxaQrkha2tSL6Aki3NOiszRJwZUj5YlP/preview" target="_blank">3. Gender, Religion and Caste</a></li>
+      <li><a href="https://drive.google.com/file/d/14CPjvvyQSAO0Ak3LK-Gg4fQgsrXMKm1S/preview" target="_blank">4. Political Parties</a></li>
+      <li><a href="https://drive.google.com/file/d/1z35H1r5dkyvLL0USjSstwKPDMXBtr3aR/preview" target="_blank">5. Outcomes of Democracy</a></li>
+    </ul>
+    <h4>Economics</h4>
+    <ul>
+      <li><a href="https://drive.google.com/file/d/1NqrVeBrtlTyiWnnK0W8lJDUTmxvdttr3/preview" target="_blank">1. Development</a></li>
+      <li><a href="https://drive.google.com/file/d/1pObDLlxGdy2pSr3m3a6IUUFMIJcVr7aI/preview" target="_blank">2. Sectors of the Indian Economy</a></li>
+      <li><a href="https://drive.google.com/file/d/1XGR6yZCahn5yL9kdurfHmC7rPSlouxGy/preview" target="_blank">3. Money and Credit</a></li>
+      <li><a href="https://drive.google.com/file/d/1VZXnfYjwYgle66dM3i2ZhZK_wIwt6wI6/preview" target="_blank">4. Globalisation and the Indian Economy</a></li>
+      <li><a href="https://drive.google.com/file/d/1hFy9nbQvj6a1VAczcO52lqwJ6bynmEOG/preview" target="_blank">5. Consumer Rights</a></li>
+    </ul>
+  </div>
+</div>
+
 
     <!-- English -->
     <div class="subject">
