--- a/Books.html
+++ b/Books.html
@@ -192,126 +192,120 @@
     </div>
 
     <!-- Social Science -->
-    <!-- Social Science -->
+    <div class="subject">
+      <div class="subject-header">Social Science</div>
+      <div class="chapter-list">
+        <h4>History</h4>
+        <ul>
+          <li><a href="https://drive.google.com/file/d/1cwRQXtZpTzzlru-9mZv1nG2eBYzGzv1w/preview" target="_blank">1. The Rise of Nationalism in Europe</a></li>
+          <li><a href="https://drive.google.com/file/d/1FxzgzQeqmov2uDPa1UIUwBt4_89Pf1JV/preview" target="_blank">2. Nationalism in India</a></li>
+          <li><a href="https://drive.google.com/file/d/1b3ftDKkJ029PLIJsVavXNLmsY0emapZ-/preview" target="_blank">3. The Making of a Global World</a></li>
+          <li><a href="https://drive.google.com/file/d/1BQgMkulyuTyEmZ_j7hKModGrBw16Aky1/preview" target="_blank">4. The Age of Industrialisation</a></li>
+          <li><a href="https://drive.google.com/file/d/1zd8tlRTmZ36MgOgozCMfIgWxDnmVldRG/preview" target="_blank">5. Print Culture and the Modern World</a></li>
+        </ul>
+        <h4>Geography</h4>
+        <ul>
+          <li><a href="https://drive.google.com/file/d/1ftdejlgIXXa07bAdZJ4hejvsML0ZyNGY/preview" target="_blank">1. Resources and Development</a></li>
+          <li><a href="https://drive.google.com/file/d/1jrX1jBmduXylCm4kDcrRKYMHEP7ZmOEj/preview" target="_blank">2. Forest and Wildlife Resources</a></li>
+          <li><a href="https://drive.google.com/file/d/1XG7Q3jXbzhmvv-oXEAlH7Uu3veSDXs8P/preview" target="_blank">3. Water Resources</a></li>
+          <li><a href="https://drive.google.com/file/d/1m3IX67SzepITEg50gIpZhdtGRhaOaoAf/preview" target="_blank">4. Agriculture</a></li>
+          <li><a href="https://drive.google.com/file/d/16ntpyrb2zA7REgpJbH7FD-ZXlr_Knuwj/preview" target="_blank">5. Minerals and Energy Resources</a></li>
+          <li><a href="https://drive.google.com/file/d/1OE1DZLgBCw5W2CPddTUiJxL21p2xTZnf/preview" target="_blank">6. Manufacturing Industries</a></li>
+          <li><a href="https://drive.google.com/file/d/1az02IoqN4gwZfYiYjOXZfl5NgJrmmPvx/preview" target="_blank">7. Lifelines of National Economy</a></li>
+        </ul>
+        <h4>Political Science</h4>
+        <ul>
+          <li><a href="https://drive.google.com/file/d/1LMJBtKFxNUX_cAxx3kkmg90VxTyirKb0/preview" target="_blank">1. Power Sharing</a></li>
+          <li><a href="https://drive.google.com/file/d/1j87jOoiY6_mfKKbB8i9N2EVQ6YwAbF6J/preview" target="_blank">2. Federalism</a></li>
+          <li><a href="https://drive.google.com/file/d/1QxaQrkha2tSL6Aki3NOiszRJwZUj5YlP/preview" target="_blank">3. Gender, Religion and Caste</a></li>
+          <li><a href="https://drive.google.com/file/d/14CPjvvyQSAO0Ak3LK-Gg4fQgsrXMKm1S/preview" target="_blank">4. Political Parties</a></li>
+          <li><a href="https://drive.google.com/file/d/1z35H1r5dkyvLL0USjSstwKPDMXBtr3aR/preview" target="_blank">5. Outcomes of Democracy</a></li>
+        </ul>
+        <h4>Economics</h4>
+        <ul>
+          <li><a href="https://drive.google.com/file/d/1NqrVeBrtlTyiWnnK0W8lJDUTmxvdttr3/preview" target="_blank">1. Development</a></li>
+          <li><a href="https://drive.google.com/file/d/1pObDLlxGdy2pSr3m3a6IUUFMIJcVr7aI/preview" target="_blank">2. Sectors of the Indian Economy</a></li>
+          <li><a href="https://drive.google.com/file/d/1XGR6yZCahn5yL9kdurfHmC7rPSlouxGy/preview" target="_blank">3. Money and Credit</a></li>
+          <li><a href="https://drive.google.com/file/d/1VZXnfYjwYgle66dM3i2ZhZK_wIwt6wI6/preview" target="_blank">4. Globalisation and the Indian Economy</a></li>
+          <li><a href="https://drive.google.com/file/d/1hFy9nbQvj6a1VAczcO52lqwJ6bynmEOG/preview" target="_blank">5. Consumer Rights</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="subject">
+      <div class="subject-header">Social Science PW</div>
+      <div class="chapter-list">
+        <ul>
+          <li>
+            <a href="https://drive.google.com/file/d/13hyxzpOIQO3kKVV_08z0t8MABYshYoPF/preview" target="_blank">
+              1. History
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1IK8ynVyfAYOPI_3PgZcg5mUm0Rcub2Fh/preview" target="_blank">
+              2. Civics
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1RW35JH8cNda-yplZ91wwGDU4qIE78qrB/preview" target="_blank">
+              3. Geography
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1A7Mo_S_5UzwUyPJMtEMTwAgN_fBFJqYH/preview" target="_blank">
+              4. Economics
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1AVWNl3HbD_D0VFByvA8wkH-31jvcrpcs/preview" target="_blank">
+              5. Practice
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+    <!-- English First Flight -->
+    <!-- Add this full block inside the same <div class="content"> just like others -->
+
 <div class="subject">
-  <div class="subject-header">Social Science</div>
+  <div class="subject-header">English First Flight</div>
   <div class="chapter-list">
-    <h4>History</h4>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1cwRQXtZpTzzlru-9mZv1nG2eBYzGzv1w/preview" target="_blank">1. The Rise of Nationalism in Europe</a></li>
-      <li><a href="https://drive.google.com/file/d/1FxzgzQeqmov2uDPa1UIUwBt4_89Pf1JV/preview" target="_blank">2. Nationalism in India</a></li>
-      <li><a href="https://drive.google.com/file/d/1b3ftDKkJ029PLIJsVavXNLmsY0emapZ-/preview" target="_blank">3. The Making of a Global World</a></li>
-      <li><a href="https://drive.google.com/file/d/1BQgMkulyuTyEmZ_j7hKModGrBw16Aky1/preview" target="_blank">4. The Age of Industrialisation</a></li>
-      <li><a href="https://drive.google.com/file/d/1zd8tlRTmZ36MgOgozCMfIgWxDnmVldRG/preview" target="_blank">5. Print Culture and the Modern World</a></li>
-    </ul>
-    <h4>Geography</h4>
-    <ul>
-      <li><a href="https://drive.google.com/file/d/1ftdejlgIXXa07bAdZJ4hejvsML0ZyNGY/preview" target="_blank">1. Resources and Development</a></li>
-      <li><a href="https://drive.google.com/file/d/1jrX1jBmduXylCm4kDcrRKYMHEP7ZmOEj/preview" target="_blank">2. Forest and Wildlife Resources</a></li>
-      <li><a href="https://drive.google.com/file/d/1XG7Q3jXbzhmvv-oXEAlH7Uu3veSDXs8P/preview" target="_blank">3. Water Resources</a></li>
-      <li><a href="https://drive.google.com/file/d/1m3IX67SzepITEg50gIpZhdtGRhaOaoAf/preview" target="_blank">4. Agriculture</a></li>
-      <li><a href="https://drive.google.com/file/d/16ntpyrb2zA7REgpJbH7FD-ZXlr_Knuwj/preview" target="_blank">5. Minerals and Energy Resources</a></li>
-      <li><a href="https://drive.google.com/file/d/1OE1DZLgBCw5W2CPddTUiJxL21p2xTZnf/preview" target="_blank">6. Manufacturing Industries</a></li>
-      <li><a href="https://drive.google.com/file/d/1az02IoqN4gwZfYiYjOXZfl5NgJrmmPvx/preview" target="_blank">7. Lifelines of National Economy</a></li>
-    </ul>
-    <h4>Political Science</h4>
-    <ul>
-      <li><a href="https://drive.google.com/file/d/1LMJBtKFxNUX_cAxx3kkmg90VxTyirKb0/preview" target="_blank">1. Power Sharing</a></li>
-      <li><a href="https://drive.google.com/file/d/1j87jOoiY6_mfKKbB8i9N2EVQ6YwAbF6J/preview" target="_blank">2. Federalism</a></li>
-      <li><a href="https://drive.google.com/file/d/1QxaQrkha2tSL6Aki3NOiszRJwZUj5YlP/preview" target="_blank">3. Gender, Religion and Caste</a></li>
-      <li><a href="https://drive.google.com/file/d/14CPjvvyQSAO0Ak3LK-Gg4fQgsrXMKm1S/preview" target="_blank">4. Political Parties</a></li>
-      <li><a href="https://drive.google.com/file/d/1z35H1r5dkyvLL0USjSstwKPDMXBtr3aR/preview" target="_blank">5. Outcomes of Democracy</a></li>
-    </ul>
-    <h4>Economics</h4>
-    <ul>
-      <li><a href="https://drive.google.com/file/d/1NqrVeBrtlTyiWnnK0W8lJDUTmxvdttr3/preview" target="_blank">1. Development</a></li>
-      <li><a href="https://drive.google.com/file/d/1pObDLlxGdy2pSr3m3a6IUUFMIJcVr7aI/preview" target="_blank">2. Sectors of the Indian Economy</a></li>
-      <li><a href="https://drive.google.com/file/d/1XGR6yZCahn5yL9kdurfHmC7rPSlouxGy/preview" target="_blank">3. Money and Credit</a></li>
-      <li><a href="https://drive.google.com/file/d/1VZXnfYjwYgle66dM3i2ZhZK_wIwt6wI6/preview" target="_blank">4. Globalisation and the Indian Economy</a></li>
-      <li><a href="https://drive.google.com/file/d/1hFy9nbQvj6a1VAczcO52lqwJ6bynmEOG/preview" target="_blank">5. Consumer Rights</a></li>
+      <li><a href="https://drive.google.com/file/d/1AqINi8bRkUNvkBopuGsBr34s93OqA-39/preview" target="_blank">1. A Letter to God</a></li>
+      <li><a href="https://drive.google.com/file/d/1jWom7YXcd0qamDqa4rdiWvXA-aiwgoGl/preview" target="_blank">2. Nelson Mandela: Long Walk to Freedom</a></li>
+      <li><a href="https://drive.google.com/file/d/1Fh6glIJVoFJWqVOI1i6ulfvhCJ1xkkir/preview" target="_blank">3. Two Stories About Flying</a></li>
+      <li><a href="https://drive.google.com/file/d/1cXCZuyUlC-pqieUiEwq_xlt1a9GkpyRP/preview" target="_blank">4. From the Diary of Anne Frank</a></li>
+      <li><a href="https://drive.google.com/file/d/1QWsqP3wTJB8MMsY06MeaaYtaGy-PzEAL/preview" target="_blank">5. Glimpses of India</a></li>
+      <li><a href="https://drive.google.com/file/d/16urvMCNmh6fFSDDfI3cP_gR5RmmjX4v7/preview" target="_blank">6. Mijbil the Otter</a></li>
+      <li><a href="https://drive.google.com/file/d/1uNojAeyq6gbO7jzUR9WdKWyQY9FywpUg/preview" target="_blank">7. Madam Rides the Bus</a></li>
+      <li><a href="https://drive.google.com/file/d/1R6I8fPHFU5fE6YDgz5sPpiXT5SffLa8M/preview" target="_blank">8. The Sermon at Benares</a></li>
+      <li><a href="https://drive.google.com/file/d/1jo0tBlrb_xL5a4AB1_7JLb0GFLWkOsER/preview" target="_blank">9. The Proposal</a></li>
     </ul>
   </div>
 </div>
+ <!-- English First Flight -->
+<div class="subject">
+  <div class="subject-header">English Footprints Without Feet</div>
+  <div class="chapter-list">
+    <ul>
+      <li><a href="https://drive.google.com/file/d/12uSgj1PQ356X30jhn1x5w3WcinkzRf5z/preview" target="_blank">1. A Triumph of Surgery</a></li>
+      <li><a href="https://drive.google.com/file/d/1yjqsPNUVKjMP7YGBQD9KSPUwnAdaHF-G/preview" target="_blank">2. The Thief's Story</a></li>
+      <li><a href="https://drive.google.com/file/d/14amBhKV1Ir5uQNxADY8HCXNLtfDq7IPz/preview" target="_blank">3. The Midnight Visitor</a></li>
+      <li><a href="https://drive.google.com/file/d/1fPWHaoln5SHc8RyrpFEza-YCElf4D0nC/preview" target="_blank">4. A Question of Trust</a></li>
+      <li><a href="https://drive.google.com/file/d/15B_uQDx1oRVKtGgqzhoIzL_ar3XXdvy3/preview" target="_blank">5. Footprints Without Feet</a></li>
+      <li><a href="https://drive.google.com/file/d/17ppDnZKfv3bjcPT55WnP3LeiTVN-sKLN/preview" target="_blank">6. The Making of a Scientist</a></li>
+      <li><a href="https://drive.google.com/file/d/1bCQFrZ0HoAGmDZxaUh6gRMjpY4U8qBl2/preview" target="_blank">7. The Necklace</a></li>
+      <li><a href="https://drive.google.com/file/d/15uaYWImqIhghm29dskisg3cXefaXihpi/preview" target="_blank">8. Bholi</a></li>
+      <li><a href="https://drive.google.com/file/d/1ia4QsnKgr-JJkAYFyMyC_NzCcVmhnZAc/preview" target="_blank">9. The Book That Saved the Earth</a></li>
+      
 
-
-    <!-- English -->
-    <div class="subject">
-      <div class="subject-header">English</div>
-      <div class="chapter-list">
-        <h4>First Flight</h4>
-        <ul>
-          <li><a href="#">1. A Letter to God</a></li>
-          <li><a href="#">2. Nelson Mandela: Long Walk to Freedom</a></li>
-          <li><a href="#">3. Two Stories About Flying</a></li>
-          <li><a href="#">4. From the Diary of Anne Frank</a></li>
-          <li><a href="#">5. Glimpses of India</a></li>
-          <li><a href="#">6. Mijbil the Otter</a></li>
-          <li><a href="#">7. Madam Rides the Bus</a></li>
-          <li><a href="#">8. The Sermon at Benares</a></li>
-          <li><a href="#">9. The Proposal</a></li>
-        </ul>
-        <h4>Footprints Without Feet</h4>
-        <ul>
-          <li><a href="#">1. A Triumph of Surgery</a></li>
-          <li><a href="#">2. The Thief’s Story</a></li>
-          <li><a href="#">3. The Midnight Visitor</a></li>
-          <li><a href="#">4. A Question of Trust</a></li>
-          <li><a href="#">5. Footprints Without Feet</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Hindi -->
-    <div class="subject">
-      <div class="subject-header">Hindi</div>
-      <div class="chapter-list">
-        <h4>Kshitij (गद्य - Prose)</h4>
-        <ul>
-          <li><a href="#">1. माता का अँचल</a></li>
-          <li><a href="#">2. जॉर्ज पंचम की नाक</a></li>
-          <li><a href="#">3. साना-साना हाथ जोड़ि...</a></li>
-          <li><a href="#">4. एही ठैयाँ झुलनी हेरानी हो रामा!</a></li>
-          <li><a href="#">5. गिरगिट</a></li>
-          <li><a href="#">6. स्पेशल एक्सप्रेस</a></li>
-          <li><a href="#">7. नेताजी का चश्मा</a></li>
-          <li><a href="#">8. बालगोबिन भगत</a></li>
-          <li><a href="#">9. लखनवी अंदाज़</a></li>
-          <li><a href="#">10. मानवीय करुणा की दिव्य चमक</a></li>
-        </ul>
-        <h4>Kshitij (पद्य - Poetry)</h4>
-        <ul>
-          <li><a href="#">1. पद</a></li>
-          <li><a href="#">2. राम-लक्ष्मण-परशुराम संवाद</a></li>
-          <li><a href="#">3. सवैये और कवित्त</a></li>
-          <li><a href="#">4. आत्मकथ्य</a></li>
-          <li><a href="#">5. उत्साह और अट नहीं रही है</a></li>
-        </ul>
-        <h4>Sparsh / Kritika (गद्य - Prose)</h4>
-        <ul>
-          <li><a href="#">1. इस जल प्रलय में</a></li>
-          <li><a href="#">2. मेरे संग की औरतें</a></li>
-          <li><a href="#">3. रीढ़ की हड्डी</a></li>
-          <li><a href="#">4. माटी वाली</a></li>
-          <li><a href="#">5. पाँच मिनट</a></li>
-        </ul>
-        <h4>Sparsh / Kritika (पद्य - Poetry)</h4>
-        <ul>
-          <li><a href="#">1. संकेत</a></li>
-          <li><a href="#">2. फूलों की घाटी</a></li>
-          <li><a href="#">3. कान्हा की याद</a></li>
-          <li><a href="#">4. दोबारा आना</a></li>
-          <li><a href="#">5. छाँव</a></li>
-        </ul>
-      </div>
-    </div>
-
-  </div>
-
-  <a href="index.html" class="back-home">← Back to Home</a>
 
   <script>
-    // Toggle chapters on subject header click
-    document.querySelectorAll('.subject-header').forEach(header => {
+    const headers = document.querySelectorAll('.subject-header');
+    headers.forEach(header => {
       header.addEventListener('click', () => {
         const chapterList = header.nextElementSibling;
         chapterList.classList.toggle('open');
