--- a/Books.html
+++ b/Books.html
@@ -10,7 +10,7 @@
       color: #1a237e;        
     }  header {        
   background: linear-gradient(90deg, #64b5f6, #42a5f5);        
-  color: white;        
+  color: #fdfde7;        
   padding: 50px 20px;        
   text-align: center;        
   box-shadow: 0 4px 16px rgba(33, 150, 243, 0.4);        
@@ -44,7 +44,7 @@ font-size: 20px;
 background-color: #64b5f6;
 cursor: pointer;
 user-select: none;
-color: white;
+color: #fefae0;
 border-bottom: 2px solid #42a5f5;
 transition: background-color 0.3s ease;
 }
@@ -291,7 +291,22 @@ box-shadow: 0 0 20px #ff5252, 0 0 40px #ff1744;
       <li><a href="https://drive.google.com/file/d/15uaYWImqIhghm29dskisg3cXefaXihpi/preview" target="_blank">8. Bholi</a></li>        
       <li><a href="https://drive.google.com/file/d/1ia4QsnKgr-JJkAYFyMyC_NzCcVmhnZAc/preview" target="_blank">9. The Book That Saved the Earth</a></li>        
        </ul>        
-  </div>  </div>        
+  </div>  
+  </div> 
+  <div class="subject">
+      <div class="subject-header">IT 402</div>
+      <div class="chapter-list">
+        <ul>
+          <li><a href="https://drive.google.com/file/d/14OaMoc0-L6yrno0vlHh8cAB6ihLjrzig/preview
+" target="_blank">1. Employability Skills</a></li>
+          <li><a href="https://drive.google.com/file/d/1Zp5u_9f0CUBzPdEoPR4BcZyV37eOYa3b/preview
+" target="_blank">2. Vocational Skills (1st Part)</a></li>
+          <li><a href="https://drive.google.com/file/d/1CEQjfUsKKQnuQ7LCLrglAxLKYK2SgUMN/preview
+" target="_blank">3. Vocational Skills (2nd Part)</a></li>
+        </ul>
+      </div>
+    </div>
+    </div>        
 <a class="back-button" href="index.html">⬅️ Back to Home</a>    <script>        
     const headers = document.querySelectorAll('.subject-header');        
     headers.forEach(header => {        
