--- a/homework.html
+++ b/homework.html
@@ -17,7 +17,7 @@
 
     header {
       background: linear-gradient(90deg, #00c9a7, #92fe9d);
-      color: white;
+      color: #fffde7;
       padding: 50px 20px;
       text-align: center;
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
