--- a/homework.html
+++ b/homework.html
@@ -105,14 +105,14 @@
 
   <div class="content">
     <div class="homework-box">
-      <h2>📝 Today's Homework 5-July-2025 </h2>
+      <h2>📝 Today's Homework 7-July-2025 </h2>
       <ul>
-        <li>English: Read the Story and complete.</li>
+        <li>English: Complete Copy.</li>
         <li>Hindi: Read the poem poem and complete copy.</li>
-        <li>Science: Read topic "SALTS".</li>
-        <li>Maths: Solve ex 5.1 in fair copy and practice other questions.</li>
-        <li>Social Science: Make extra questions and read.</li>
-        <li>IT 402: Do Homework of Session 6 & 7.</li>
+        <li>Science: Make Notes/Read chapter.</li>
+        <li>Maths: ----------.</li>
+        <li>Social Science: Complete Extra Questions, Map Work of 2nd Chapter, try to solce exercise.</li>
+        <li>Bio: ---------.</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
