--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
       font-size: 0.95rem;
     }
 
+    .notice-bar {
+      background-color: #ffcccb;
+      color: #111;
+      font-weight: bold;
+      padding: 10px;
+      font-size: 16px;
+      border-top: 2px solid #d9534f;
+      border-bottom: 2px solid #d9534f;
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.2);
+    }
+
     nav {
       margin-top: 20px;
       text-align: center;
@@ -82,7 +93,7 @@
     .btn-posts { background: #cdb4db; }
     .btn-contact { background: #b5ead7; }
     .btn-fee { background: #ffffb5; }
-    .btn-books { background: #d0f4de; } /* New Books button */
+    .btn-books { background: #d0f4de; }
 
     .btn:hover {
       transform: scale(1.05);
@@ -181,20 +192,22 @@
     <div class="header-container">
       <div class="school-info">
         <h1>🕉️<br> Saraswati Senior Secondary Vidya Mandir</h1>
-<h2 style="font-size: 20px;">Class 10th - Section F</h2>
-<p style="font-size: 16px;"><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
-
-  <strong style="font-size: 14px;">(Developer:</strong> 
-  <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh</span>)
-</p>
-
-
-<!-- font link in head -->
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
-
+        <h2 style="font-size: 20px;">Class 10th - Section F</h2>
+        <p style="font-size: 16px;"><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
+        <strong style="font-size: 14px;">(Developer:</strong> 
+        <span style="font-family: 'Dancing Script', cursive; font-size: 17px; color: #333;">Priyanshu Singh</span>)
       </div>
     </div>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
   </header>
+
+  <!-- 📢 NOTICE BAR START -->
+  <div class="notice-bar">
+    <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
+      🔔 Important Notice: IT 402 book by Sumit Arora is uploaded ✨. Please check the Books section, and wait for some days for English's, Hindi's Help book and Physical Education's Book.
+    </marquee>
+  </div>
+  <!-- 📢 NOTICE BAR END -->
 
   <nav>
     <ul class="nav-buttons">
@@ -203,7 +216,7 @@
       <li><a href="homework.html" class="btn btn-homework"><i class="fas fa-book"></i> 📚 HOMEWORK</a></li>
       <li><a href="Notices.html" class="btn btn-notice"><i class="fas fa-bullhorn"></i> 📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts"><i class="fas fa-pencil-alt"></i> ✍️ POSTS</a></li>
-      <li><a href="Books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a></li> <!-- NEW BUTTON -->
+      <li><a href="Books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a></li>
       <li><a href="#contact" class="btn btn-contact"><i class="fas fa-address-book"></i> ☎️ CONTACT</a></li>
       <li><a href="#FeePayment" class="btn btn-fee"><i class="fas fa-money-bill-wave"></i> 💸 FEE PAYMENT</a></li>
     </ul>
@@ -254,4 +267,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-</html>
+                                                                                               </html>
