--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <style>
+    /* --- Styles same as before --- */
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
@@ -166,6 +167,7 @@
       font-size: 14px;
       color: #666;
       margin-bottom: 30px;
+      transition: transform 0.3s ease;
     }
 
     .main-box {
@@ -175,19 +177,130 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
       padding: 30px 20px;
       margin: 15px;
+      transition: transform 0.3s ease;
     }
 
-    .main-box section:first-child {
-      margin-top: 0;
+    /* Side Navigation */
+    .side-nav {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1200;
+      top: 0;
+      left: 0;
+      background-color: #ffdb99;
+      overflow-x: hidden;
+      overflow-y: auto;
+      transition: width 0.4s ease;
+      padding-top: 60px;
+      box-shadow: 3px 0 10px rgba(0,0,0,0.3);
+      border-right: 3px solid #000;
+
+      /* Rounded rectangle shape */
+      border-radius: 0 20px 20px 0;
+      max-width: 260px;
     }
 
-    .main-box section:first-child h2 {
-      margin-top: 0;
+    .side-nav.open {
+      width: 260px;
+    }
+
+    .side-nav a {
+      opacity: 0;
+      transform: translateX(-30px);
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      padding: 14px 30px;
+      text-decoration: none;
+      font-size: 16px;
+      color: #222;
+      display: block;
+      font-weight: 600;
+      border-radius: 8px;
+      margin: 6px 12px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+
+    .side-nav.open a {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    .side-nav a i {
+      margin-right: 10px;
+      font-size: 18px;
+      vertical-align: middle;
+    }
+
+    .side-nav a:hover {
+      background-color: #ffd580;
+      color: #000;
+      box-shadow: 0 0 10px #ffb347;
+    }
+
+    /* Hamburger menu icon */
+    .menu-icon {
+      font-size: 28px;
+      cursor: pointer;
+      position: fixed;
+      top: 18px;
+      left: 18px;
+      z-index: 1300;
+      color: #000;
+      background: #ffdb99;
+      padding: 6px 12px;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.15);
+      user-select: none;
+      transition: background 0.3s ease;
+    }
+
+    .menu-icon:hover {
+      background: #ffd580;
+    }
+
+    main, header, nav, footer {
+      transition: transform 0.3s ease;
+    }
+
+    main.slide-out, header.slide-out, nav.slide-out, footer.slide-out {
+      transform: translateX(20px);
+    }
+    main.slide-in, header.slide-in, nav.slide-in, footer.slide-in {
+      transform: translateX(0);
+    }
+
+    #overlay {
+      display: none;
+      position: fixed;
+      z-index: 1100;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: transparent;
     }
   </style>
 </head>
-
 <body id="top">
+
+  <!-- Sidebar -->
+  <div id="sideNav" class="side-nav" aria-label="Sidebar navigation">
+    <a href="#" class="btn btn-home"><i class="fas fa-home"></i> 🏠 HOME</a>
+    <a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank" class="btn btn-students"><i class="fas fa-file-alt"></i> 👨‍🎓 STUDENTS LIST</a>
+    <a href="homework.html" class="btn btn-homework"><i class="fas fa-book"></i> 📚 HOMEWORK</a>
+    <a href="Notices.html" class="btn btn-notice"><i class="fas fa-bullhorn"></i> 📢 NOTICE</a>
+    <a href="post.html" class="btn btn-posts"><i class="fas fa-pencil-alt"></i> ✍️ POSTS</a>
+    <a href="Books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a>
+    <a href="#contact" class="btn btn-contact"><i class="fas fa-address-book"></i> ☎️ CONTACT</a>
+    <a href="#FeePayment" class="btn btn-fee"><i class="fas fa-money-bill-wave"></i> 💸 FEE PAYMENT</a>
+  </div>
+
+  <!-- Overlay -->
+  <div id="overlay"></div>
+
+  <!-- Hamburger menu icon -->
+  <span class="menu-icon" id="menuToggle" aria-label="Toggle menu">&#9776;</span>
+
   <header>
     <div class="header-container">
       <div class="school-info">
@@ -201,13 +314,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
   </header>
 
-  <!-- 📢 NOTICE BAR START -->
   <div class="notice-bar">
     <marquee behavior="scroll" direction="left" scrollamount="5" onmouseover="this.stop();" onmouseout="this.start();">
-      🔔 Important Notice: IT 402 book by Sumit Arora is uploaded ✨. Please check the Books section, and wait for some days for English's, Hindi's Help book and Physical Education's Book.
+      🔔 Important Notice: Important Notice: IT 402 book by Sumit Arora is uploaded ✨. Please check the Books section, and wait for some days for English's, Hindi's Help book and Physical Education's Book.
     </marquee>
   </div>
-  <!-- 📢 NOTICE BAR END -->
 
   <nav>
     <ul class="nav-buttons">
@@ -257,7 +368,7 @@
       <h2>📞 CONTACT US</h2>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
       <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
-      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
+      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858" target="_blank" rel="noopener">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
   </main>
@@ -266,5 +377,60 @@
     <a href="#top" class="scroll-top">🚀 Fly to Top</a>
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
-</body>
-                                                                                               </html>
+
+  <script>
+    const sideNav = document.getElementById("sideNav");
+    const menuToggle = document.getElementById("menuToggle");
+    const overlay = document.getElementById("overlay");
+
+    function openNav() {
+      sideNav.classList.add("open");
+      overlay.style.display = "block";
+
+      document.querySelector("main").classList.remove("slide-out");
+      document.querySelector("main").classList.add("slide-in");
+      document.querySelector("header").classList.remove("slide-out");
+      document.querySelector("header").classList.add("slide-in");
+      document.querySelector("nav").classList.remove("slide-out");
+      document.querySelector("nav").classList.add("slide-in");
+      document.querySelector("footer").classList.remove("slide-out");
+      document.querySelector("footer").classList.add("slide-in");
+    }
+
+    function closeNav() {
+      sideNav.classList.remove("open");
+      overlay.style.display = "none";
+
+      document.querySelector("main").classList.remove("slide-in");
+      document.querySelector("main").classList.add("slide-out");
+      document.querySelector("header").classList.remove("slide-in");
+      document.querySelector("header").classList.add("slide-out");
+      document.querySelector("nav").classList.remove("slide-in");
+      document.querySelector("nav").classList.add("slide-out");
+      document.querySelector("footer").classList.remove("slide-in");
+      document.querySelector("footer").classList.add("slide-out");
+    }
+
+    function toggleNav() {
+      if (sideNav.classList.contains("open")) {
+        closeNav();
+      } else {
+        openNav();
+      }
+    }
+
+    menuToggle.addEventListener("click", toggleNav);
+
+    // Close sidebar if clicking outside sidebar (overlay)
+    overlay.addEventListener("click", closeNav);
+
+    // Close sidebar on pressing Escape key
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && sideNav.classList.contains("open")) {
+        closeNav();
+      }
+    });
+  </script>
+  </body>
+</html>
+  
