--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
     <a href="Notices.html">📢 NOTICE</a>
     <a href="post.html">✍️ POSTS</a>
     <a href="Books.html">📖 BOOKS</a>
-    <a href="#contact">☎️ CONTACT</a>
-    <a href="#FeePayment">💸 FEE PAYMENT</a>
+    <a href="#contact" onclick="closeNav()">☎️ CONTACT</a>
+    <a href="#FeePayment" onclick="closeNav()">💸 FEE PAYMENT</a>
   </div>
 
   <div id="overlay"></div>
@@ -371,4 +371,4 @@
     });
   </script>
 </body>
-                                </html>
+  </html>
